err/django-media-tree.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_media_tree-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/admin'...
Listing './lib/python3.5/site-packages/media_tree/admin/actions'...
Compiling './lib/python3.5/site-packages/media_tree/admin/actions/forms.py'...
***   File "./lib/python3.5/site-packages/media_tree/admin/actions/forms.py", line 81
    except InvalidMove, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/media_tree/contrib'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_gallery'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_gallery/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_gallery/templates/cms'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_gallery/templates/cms/plugins'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_image'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_image/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_image/templates/cms'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_image/templates/cms/plugins'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_listing'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_listing/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_listing/templates/cms'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_listing/templates/cms/plugins'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_slideshow'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_slideshow/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_slideshow/templates/cms'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/media_tree_slideshow/templates/cms/plugins'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/static'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/static/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/contrib/cms_plugins/static/media_tree/js'...
Listing './lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support'...
Compiling './lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support/forms.py'...
***   File "./lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support/forms.py", line 150
    except InvalidMove, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support/templates/admin'...
Listing './lib/python3.5/site-packages/media_tree/contrib/legacy_mptt_support/templatetags'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_backends'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_backends/easy_thumbnails'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_backends/sorl_thumbnail'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions/images'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions/images/focal_point'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions/images/focal_point/static'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions/images/focal_point/static/focal_point'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_extensions/zipfiles'...
Listing './lib/python3.5/site-packages/media_tree/contrib/media_tree_modeltranslation'...
Listing './lib/python3.5/site-packages/media_tree/contrib/views'...
Listing './lib/python3.5/site-packages/media_tree/contrib/views/detail'...
Listing './lib/python3.5/site-packages/media_tree/contrib/views/listing'...
Listing './lib/python3.5/site-packages/media_tree/contrib/views/templates'...
Listing './lib/python3.5/site-packages/media_tree/contrib/views/templates/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/extension'...
Listing './lib/python3.5/site-packages/media_tree/extension/base_extenders'...
Listing './lib/python3.5/site-packages/media_tree/locale'...
Listing './lib/python3.5/site-packages/media_tree/locale/de'...
Listing './lib/python3.5/site-packages/media_tree/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/media_tree/locale/en'...
Listing './lib/python3.5/site-packages/media_tree/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/media_tree/locale/nb'...
Listing './lib/python3.5/site-packages/media_tree/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/media_tree/management'...
Listing './lib/python3.5/site-packages/media_tree/management/commands'...
Listing './lib/python3.5/site-packages/media_tree/media_backends'...
Listing './lib/python3.5/site-packages/media_tree/migrations'...
Listing './lib/python3.5/site-packages/media_tree/static'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/css'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/img'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/img/icons'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/img/icons/mimetypes'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/js'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/fineuploader-4.4.0'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/fineuploader-4.4.0/placeholders'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/fineuploader-4.4.0/templates'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/jquery'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/jquery.cycle'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/jquery.fineuploader-4.4.0'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/jquery.fineuploader-4.4.0/placeholders'...
Listing './lib/python3.5/site-packages/media_tree/static/media_tree/lib/jquery.fineuploader-4.4.0/templates'...
Listing './lib/python3.5/site-packages/media_tree/templates'...
Listing './lib/python3.5/site-packages/media_tree/templates/admin'...
Listing './lib/python3.5/site-packages/media_tree/templates/admin/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/templates/admin/media_tree/filenode'...
Listing './lib/python3.5/site-packages/media_tree/templates/admin/media_tree/filenode/includes'...
Listing './lib/python3.5/site-packages/media_tree/templates/media_tree'...
Listing './lib/python3.5/site-packages/media_tree/templates/media_tree/filenode'...
Listing './lib/python3.5/site-packages/media_tree/templates/media_tree/filenode/includes'...
Listing './lib/python3.5/site-packages/media_tree/templatetags'...
Listing './lib/python3.5/site-packages/media_tree/utils'...
Compiling './lib/python3.5/site-packages/media_tree/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/media_tree/utils/__init__.py", line 24
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
